--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "three-stdlib": "^2.34.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-decorators": "^7.25.9",
     "@types/react": "^18.2.67",
     "@types/react-dom": "^18.2.22",
     "@types/three": "^0.170.0",
@@ -35,6 +37,7 @@
     "eslint-plugin-tailwindcss": "^3.15.1",
     "postcss": "^8.4.49",
     "prettier-plugin-tailwindcss": "^0.5.12",
+    "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.4.2",
     "vite": "^5.4.11"
