--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "flowbite-react": "^0.8.0",
+    "framer-motion": "^11.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.170.0",
