--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "eslint-plugin-tailwindcss": "^3.15.1",
     "postcss": "^8.4.49",
     "prettier-plugin-tailwindcss": "^0.5.12",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^5.12.0",
     "tailwindcss": "^3.4.14",
+    "terser": "^5.36.0",
     "typescript": "^5.4.2",
     "vite": "^5.4.11"
   }
